# ripdir

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md
ripdir/: Cargo.toml
